--- a/VPhotoview/VPhotoview/Base.lproj/Main.storyboard
+++ b/VPhotoview/VPhotoview/Base.lproj/Main.storyboard
@@ -1,24 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yfw-No-nsm">
+                                <rect key="frame" x="0.0" y="36" width="414" height="777"/>
+                            </scrollView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ys5-8B-zfa">
+                                <rect key="frame" x="0.0" y="813" width="414" height="49"/>
+                                <items>
+                                    <barButtonItem title="Previous" id="MS6-GB-DSk">
+                                        <connections>
+                                            <action selector="keyPrevious:" destination="BYZ-38-t0r" id="EhF-Jx-Y5l"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem title="Next" id="PeP-PE-XkU">
+                                        <connections>
+                                            <action selector="keyNext:" destination="BYZ-38-t0r" id="JwU-7D-Avz"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Yfw-No-nsm" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="B2u-eR-tbY"/>
+                            <constraint firstItem="Yfw-No-nsm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Fgo-d2-dkI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ys5-8B-zfa" secondAttribute="trailing" id="Fmc-iL-4Ux"/>
+                            <constraint firstItem="ys5-8B-zfa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="HbC-ng-1l2"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="Yfw-No-nsm" secondAttribute="top" constant="8" id="Q8l-qR-shF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Yfw-No-nsm" secondAttribute="trailing" id="kgd-Kj-dMt"/>
+                            <constraint firstItem="ys5-8B-zfa" firstAttribute="top" secondItem="Yfw-No-nsm" secondAttribute="bottom" id="qlu-VU-k16"/>
+                            <constraint firstItem="ys5-8B-zfa" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="zlk-U5-cax"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="photoScrollView" destination="Yfw-No-nsm" id="f9h-py-aNo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="109.82142857142857"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
